# cosmic-session

./: .gitignore  .rustfmt.toml  Cargo.toml  Justfile  flake.nix
.github/workflows/: test.yml
data/: cosmic-mimeapps.list  cosmic-session.target  cosmic-x.desktop  cosmic.desktop  start-cosmic
data/dconf/profile/: cosmic
debian/: changelog  control  copyright  cosmic-session.gsettings-override  cosmic-session.install  rules
src/: a11y.rs  comp.rs  generic.rs  main.rs  notifications.rs  panel.rs  process.rs  service.rs  systemd.rs
