[package]
name = "cosmic-session"
description = "The session manager for the COSMIC desktop environment"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"
authors = ["Lucy <lucy@system76.com>"]
publish = false

[dependencies]
async-signals = "0.4"
color-eyre = "0.6"
futures-util = "0.3"
launch-pad = { git = "https://github.com/pop-os/launch-pad", branch = "stdin-msg" }
libc = "0.2"
log-panics = { version = "2", features = ["with-backtrace"] }
nix = { version = "0.26", features = ["fs"], default-features = false }
scopeguard = "1"
sendfd = { version = "0.4", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "signal",
  "sync",
  "time",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-journald = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "3", default-features = false, features = ["tokio"] }
cosmic-notifications-util = { git = "https://github.com/pop-os/cosmic-notifications"}
