[package]
name = "cosmic-session"
description = "The session manager for the COSMIC desktop environment"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"
authors = ["Lucy <lucy@system76.com>"]
publish = false

[dependencies]
async-signals = "0.4"
color-eyre = "0.6"
futures-util = "0.3"
cosmic-dbus-a11y = { git = "https://github.com/pop-os/dbus-settings-bindings" }

# launch-pad = { git = "https://github.com/pop-os/launch-pad" }
itertools = "0.12"
launch-pad = { git = "https://github.com/pop-os/launch-pad" }
libc = "0.2"
log-panics = { version = "2", features = ["with-backtrace"] }
rustix = "0.38"
scopeguard = "1"
sendfd = { version = "0.4", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "io-std",
  "macros",
  "net",
  "parking_lot",
  "process",
  "rt",
  "signal",
  "sync",
  "time",
] }
zbus_systemd = { version = "0.25600.0", optional = true, features = [
  "systemd1",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-journald = { version = "0.3", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zbus = { version = "4.3.0", default-features = false, features = ["tokio"] }
cosmic-notifications-util = { git = "https://github.com/pop-os/cosmic-notifications" }

[features]
systemd = ["dep:zbus_systemd", "dep:tracing-journald"]
default = ["systemd"]
